# copilot-scaffold

./: .coderabbit.yaml  .dockerignore  .env.example  .env.local.dev  .env.local.example  .env.production.example  .gitignore  ASSET_UPGRADE.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile.backend  Dockerfile.frontend  INTEGRATION_FIX.md  README-LOCAL-DEV.md  README.docker.md  README.md  README_STARTUP.md  arch-v3.md  architecture-v2.md  debug-auth-prompt.md  delegative-ui-science-labs.md  docker-compose.yml  jest.config.js  middleware.ts  monitor-logs.sh  next.config.js  package-lock.json  package.json  playwright.config.ts  shutdown.sh  speech.d.ts  startup.sh  tailwind.config.ts  test-chat-message.sh  test-companion.sh  test_course_builder_direct.py  test_graph_direct.py  tsconfig.json
.browser/: README.md
.godag/: plan.md  state.json
.tasks/: DEPLOYMENT.md  FINAL-ANALYSIS.md  SOLUTION-agent-hang-fixed.md  SOLUTION.md  T1-graph-pattern-comparison.md  T3-completion-summary.md  TYPESCRIPT_FIXES.md  VERIFICATION_STRATEGY.md  agent-debug-summary.md  agent-routing-research.md  arch-v3-commit-verification.md  arch-v3-implementation-audit.md  arch-v3-test-results.md  arch-v3-testing.md  build-results.txt  chat-debug-plan.md  chat-flow-testing.md  chat-issue-summary.md  context7-supabase-selfhost.md  context7-supabase.md  conversation-flow-test-summary.md  copilotkit-compatibility.md  course-builder-communication-fixes.md  debug-course-builder-hang.md  e2e-progress-summary.md  e2e-test-runner.py  environment-setup-log.md  error-handling-test-results.md  explore-findings-auth.md  explore-findings.md  explore-slice12.md  feat-course-builder-conversation-memory.md  feat-slice-10-course-builder-ui.md  feat-slice-11-course-builder-agent.md  final-solution.md  fix-arch-v3-infrastructure.md  fix-coursebuilder-rendering.md  fix-slider-particle-disappear.md  fix-summary.md  langgraph-checkpointing.md  (+17 more)
agent/: .env.example  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  config.py  langgraph.json  main.py  middleware.py  models.py  pyproject.toml  test_agents.py  test_event_history.py  test_letta_integration.py  test_prompt_logging.py  test_realtime_state.py  test_state_injection.py  tools.py
agent/.tasks/: communication-test.md  error-analysis.md
agent/graphs/: __init__.py  chat.py  course_builder.py  observation.py
agent/lib/: __init__.py  supabase_client.py
agent/memory/: LETTA_API.md  __init__.py  letta_client.py
agent/middleware/: __init__.py  auth.py  protocol.py
agent/routes/: screenshot.py  sessions.py
agent/tests/: conftest.py  test_chat_graph.py  test_course_builder.py  test_memory_integration.py  test_reaction_lookup.py  test_sessions.py
agent/tests/fixtures/: sample_events.py
agent/tools/: __init__.py  emit_reaction.py
agent/topics/: __init__.py
agent/topics/changing_states/: __init__.py  config.py  reactions.py
agent/topics/electric_circuits/: __init__.py  config.py  reactions.py
agent/topics/genetics_basics/: __init__.py  config.py  reactions.py
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
backend/: .env.example  langgraph.json  pyproject.toml  server.py
backend/agent/: graph.py  state.py  tools.py
backend/agent/subagents/: __init__.py  registry.py
components/: ErrorBoundary.tsx  Providers.tsx  TopicCard.tsx
contexts/: AuthContext.tsx  LocaleContext.tsx
docs/: SCREENSHOT_FIX_NEEDED.md  course-files-final.md  course-files-storage.md  local-dev-setup.md  migration-summary.md  save-course-implementation.md  screenshot-capture-issue.md  storage-complete-solution.md  supabase-setup.md
examples/: __init__.py  index.ts  mcp_client.py
framework/: SoundManager.tsx  TopicPageLayout.tsx  TopicRunner.tsx
lib/: gemini-voice.ts  i18n.ts  session.ts  sounds.ts  templates.ts
scripts/: integration-test.sh
supabase/: check-profiles.ts  debug-rls.ts  fix-profiles-rls.sql  init-letta-db.sql  init-supabase-schema.sh  kong.yml  (+3 more)
(+201 files in other folders)
