[project]
name = "omniscience-agent"
version = "0.1.0"
description = "LangGraph agents for Omniscience interactive learning platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "copilotkit>=0.1.30",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.1.0",
    "supabase>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graphs", "topics", "tools", "models.py", "config.py"]
