[project]
name = "copilot-scaffold-backend"
version = "0.1.0"
description = "CopilotKit + LangGraph + FastAPI backend scaffold"
requires-python = ">=3.12"
dependencies = [
    "copilotkit[langgraph]==0.1.75",
    "ag-ui-langgraph>=0.0.28",
    "langgraph>=1.0.10,<1.1.0",
    "langchain-core>=1.2.20",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=0.3.34,<0.4.0",
    "fastapi>=0.115.14,<0.116.0",
    "uvicorn[standard]>=0.42.0,<1.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
